# csgo-match-interview

./: .gitignore  DESIGN.md  Makefile  README.md  docker-compose.yaml  package-lock.json
backend/: Makefile  match-data.txt  pyproject.toml
backend/src/: __main__.py  main.py  parser.py  routes.py  schemas.py  settings.py
backend/src/events/: __init__.py  bases.py  enums.py  event_interactor.py  events.py  registry.py  schemas.py
backend/tests/: conftest.py  utils.py
backend/tests/endpoint_tests/: test_get_average_round_time.py  test_get_money_spent_per_round.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: statsApi.ts
frontend/src/components/: ChartContainer.tsx  ChartsGrid.tsx  KillHeatmapChart.tsx  KillsBarChart.tsx  MoneyLineChart.tsx  RoundTimeDisplay.tsx  WeaponKillsBarChart.tsx
frontend/src/types/: chartTypes.ts
